# PC-Unifier

./: .gitignore  Architecture.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Config Schema.md  Readme.md  Roadmap.md
.github/workflows/: ci.yml  claude-auto-review.yml  claude-code-review.yml  claude.yml
docs/: Config Schema.md  Roadmap.md  context.md  platform-macos.md
src/: main.rs
src/config/: mod.rs
src/engine/: mod.rs
src/event_bus/: mod.rs
src/lua_runtime/: mod.rs
src/platform/: mod.rs
src/platform/linux/: detect.rs  keycodes.rs  mod.rs
src/platform/linux/evdev/: capture.rs  mod.rs
src/platform/linux/wayland/: capture.rs  executor.rs  mod.rs
src/platform/macos/: capture.rs  executor.rs  keycodes.rs  mod.rs
src/platform/windows/: capture.rs  executor.rs  keycodes.rs  mod.rs
src/rule_engine/: hotkey.rs  hotstring.rs  keycodes.rs  mod.rs  remap.rs
